# sphinx_demo

./: .readthedocs.yml  Makefile  README.md  calc.html  calc.py  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html
_sources/: index.rst.txt  modules.rst.txt
docs/: calc.rst  conf.py  modules.rst
docs/_build/doctrees/: calc.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  calc.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/_build/html/_static/: custom.css
