[tool.poetry]
name = "sphinx-demo"
version = "0.1.0"
description = "Sphinx Demo"
authors = ["Renato Silva <renatoramossilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
myst-parser = "2.0.0"
Sphinx = "7.1.2"
sphinx-rtd-theme = "2.0.0"
sphinxcontrib-mermaid = "0.9.2"
attrs = "23.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
